syntax = "proto3";

package v1alpha2;

service Dummy {
    // ComputeDouble computes the double of the input. Real smart stuff!
    rpc ComputeDouble(ComputeDoubleRequest) returns (ComputeDoubleResponse) {}
}

message ComputeDoubleRequest{
    // we changed in favor of an int64 field here
    int64 input64 = 1;
}

message ComputeDoubleResponse{
    int64 response = 1;
}
